testsuite/negative/Issue-911.n
variant Y
{
 | A
 | B
 {
  | C // E: multi-level variants are not supported
 }
}
